shut down a selection's autoscroll timer in the selection's destructor. bug 43470. r=saari@netscape.com